--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,15 +4,19 @@ logging.level.org.springframework=INFO
 
 # H2 IN MEMORY DB CONFIGURATION
 
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:studentdb
-spring.datasource.username=test
-spring.datasource.password=
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.url=jdbc:h2:mem:studentdb
+#spring.datasource.username=test
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.h2.console.enabled=true
+##spring.h2.console.path=/h2
 
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-spring.h2.console.enabled=true
-#spring.h2.console.path=/h2
+## MYSQL DB Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/studentdb?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=testdb
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
 #spring.sql.init.schema-locations=
 #spring.sql.init.data-locations=
